@@ -32,6 +32,7 @@
 namespace WebKit {
 
 class WebLayerTreeView;
+class WebLayerTreeViewClient;
 class WebURL;
 class WebURLResponse;
 struct WebURLError;
@@ -55,16 +56,17 @@ public:
     virtual WebString webKitRootDir() { return WebString(); }
 
     // Constructs a WebLayerTreeView set up with reasonable defaults for
-    // testing. A LayerTreeTypeUnitTest view can initialize and perform most
-    // operations, but is not capable of rendering pixels. A
-    // LayerTreeTypeLayoutTest view can render.
+    // testing.
 
+    virtual WebLayerTreeView* createLayerTreeViewForTesting() { return 0; }
+
+    // DEPRECATED, use the version above.
 #define HAVE_CREATELAYERTREEVIEWFORTESTING 1
     enum TestViewType {
         TestViewTypeUnitTest,
         TestViewTypeLayoutTest
     };
-    virtual WebLayerTreeView* createLayerTreeViewForTesting(TestViewType type) { return 0; }
+    virtual WebLayerTreeView* createLayerTreeViewForTesting(TestViewType) { return 0; }
 };
 
 }
